<resources>
    <string name="app_name">Oscill</string>
    <string name="active">Active:</string>
    <string name="run">Run</string>
    <string name="stop">Stop</string>
    <string name="single">Single</string>
    <string name="channel">Channel</string>
    <string name="norm">Norm</string>
    <string name="peak">Peak</string>
    <string name="avg">Avg</string>
    <string name="high_res">Avg\nHi Res</string>
    <string name="ac">AC</string>
    <string name="gnd">Gnd</string>
    <string name="hi_filter">Hi\nFilter</string>
    <string name="lo_filter">Lo\nFilter</string>
    <string name="trigger">Trigger</string>
    <string name="volt_div">Volt / Div</string>
    <string name="time_div">Time / Div</string>
    <string name="connected">connected</string>
    <string name="disconnected">disconnected</string>
    <string name="dc">DC</string>
    <string name="auto">A</string>
    <string name="timeout">T</string>
    <string name="wait">W</string>
    <string name="free">F</string>
    <string name="trigger_front">_/</string>
    <string name="trigger_back">\\_</string>
    <string name="up">+</string>
    <string name="down">-</string>
    <string name="reset">0</string>
    <string name="offset">Offset</string>
</resources>
