<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.github.mikephil.charting.charts.LineChart
        android:id="@+id/chart"
        android:paddingTop="4dp"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/settingsLayout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <LinearLayout
        android:id="@+id/settingsLayout"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:padding="8dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/chart"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/activeText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/active"
                />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/activeStateText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:textStyle="bold"
                android:text="@string/disconnected"
                />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/runBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/run"
                />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/singleRunBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/single"
                />

        </LinearLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/channel"
            android:textStyle="bold"
            />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="36dp">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/normBtn"
                android:textSize="12sp"
                android:layout_width="40dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/norm"
                />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/peakBtn"
                android:textSize="12sp"
                android:layout_width="40dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/peak"
                />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/avgBtn"
                android:textSize="12sp"
                android:layout_width="40dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/avg"
                />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/avgHiResBtn"
                android:textSize="12sp"
                android:layout_width="40dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/high_res"
                />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="36dp">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/dcBtn"
                android:textSize="12sp"
                android:layout_width="48dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/dc"
                />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/acBtn"
                android:textSize="12sp"
                android:layout_width="48dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/ac"
                />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/gndBtn"
                android:textSize="12sp"
                android:layout_width="40dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/gnd"
                />

        </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="36dp">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/highFilterBtn"
            android:textSize="12sp"
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/hi_filter"
            />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/lowFilterBtn"
            android:textSize="12sp"
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/lo_filter"
            />

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/trigger"
            android:textStyle="bold"
            />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/triggerStartBtn"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:src="@drawable/ic_level_up_alt_solid"
                android:tint="@color/primaryColor"
                android:scaleType="centerInside"
                />

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/triggerEndBtn"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:src="@drawable/ic_level_down_alt_solid"
                android:tint="@color/primaryColor"
                android:scaleType="centerInside"
                />

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/triggerFreeBtn"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:src="@drawable/ic_random_solid"
                android:tint="@color/primaryColor"
                android:scaleType="centerInside"
                />

        </LinearLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/volt_div"
            android:textStyle="bold"
            />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/voltUpBtn"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:src="@drawable/ic_angle_double_up_solid"
                android:tint="@color/primaryColor"
                android:scaleType="centerInside"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/voltDivText"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:gravity="center"
                tools:text="1V"
                app:layout_constraintStart_toEndOf="@+id/voltUpBtn"
                app:layout_constraintEnd_toStartOf="@+id/voltDownBtn"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                />

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/voltDownBtn"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:src="@drawable/ic_angle_double_down_solid"
                android:tint="@color/primaryColor"
                android:scaleType="centerInside"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/time_div"
            android:textStyle="bold"
            />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/timeUpBtn"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:src="@drawable/ic_angle_double_up_solid"
                android:tint="@color/primaryColor"
                android:scaleType="centerInside"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/timeDivText"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:gravity="center"
                tools:text="1ms"
                app:layout_constraintStart_toEndOf="@+id/timeUpBtn"
                app:layout_constraintEnd_toStartOf="@+id/timeDownBtn"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                />

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/timeDownBtn"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:src="@drawable/ic_angle_double_down_solid"
                android:tint="@color/primaryColor"
                android:scaleType="centerInside"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>